foundation-objs/main/default/objects/Integration_Scope_Add_On__c/Integration_Scope_Add_On__c.object-meta.xml
<CustomObject>
    <label>Integration Scope Add On</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Scope Add Ons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>