foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Add_On_Status__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Status__c</fullName>
    <label>Add On Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable any more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>