foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>