foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <formula>( List_Price__c - ( (List_Price__c *  Discount_Percentage__c) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>