foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/ERP_Family__c.field-meta.xml
<CustomField>
    <fullName>ERP_Family__c</fullName>
    <label>ERP Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>