foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Estimated_Effort_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_In_Days__c</fullName>
    <label>Estimated Effort(In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>