foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>