foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Related_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Related_Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Add On</label>
    <referenceTo>Integration_Add_On__c</referenceTo>
    <relationshipLabel>Integration Scope Add Ons</relationshipLabel>
    <relationshipName>Integration_Scope_Add_Ons</relationshipName>
    <type>Lookup</type>
</CustomField>