foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Integration Scope Add Ons</relationshipLabel>
    <relationshipName>Related_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>