foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <formula>CASESAFEID(Related_Quote__r.OpportunityId)</formula>
    <label>Related Opportunity</label>
    <type>Text</type>
</CustomField>