foundation-objs/main/default/objects/Integration_Scope_Add_On__c/fields/Related_Quote__c.field-meta.xml
<CustomField>
    <fullName>Related_Quote__c</fullName>
    <label>Related Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Integration Scope Add Ons</relationshipLabel>
    <relationshipName>Related_Quote</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>