foundation-objs/main/default/objects/Integration_Scope_Add_On__c/listViews/Integration_Add_On_Approval_Queue_Integration_Add_On.listView-meta.xml
<ListView>
    <fullName>Integration_Add_On_Approval_Queue_Integration_Add_On</fullName>
    <filterScope>Mine</filterScope>
    <label>Integration Add On Approval Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>